Bug 535327 - Streamline maven poms hierachy
Needed so tycho-versions:set-versions works properly.
Not all modules handled properly but majority are which is good enough
for me now.

Change-Id: I62d65744ed65d083f3755aab86b925fa780092b5
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>